--- a/app/src/main/res/layout/activity_forgotpass_return.xml
+++ b/app/src/main/res/layout/activity_forgotpass_return.xml
@@ -58,7 +58,7 @@
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_alignParentEnd="true"
-                        app:srcCompat="@drawable/vec_logo" />
+                        app:srcCompat="@drawable/ic_blueantenna" />
                 </RelativeLayout>
 
                 <LinearLayout
