--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
                     android:layout_alignParentTop="true"
                     android:padding="5dp">
 
+                    <!--
                     <TextView
                         android:id="@+id/textView"
                         android:layout_width="match_parent"
@@ -49,39 +50,51 @@
                         android:letterSpacing=".125"
                         android:paddingStart="20dp"
                         android:paddingEnd="20dp"
-                        android:text="Centri App Login"
+                        android:text="Login"
                         android:textColor="@color/colorPrimaryBlue"
                         android:textSize="24sp" />
+                    -->
 
+                    <!--
                     <ImageView
                         android:id="@+id/imageView2"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_alignParentEnd="true"
-                        app:srcCompat="@drawable/vec_logo" />
+                        app:srcCompat="@drawable/ic_blueantenna" />
+                     -->
                 </RelativeLayout>
 
                 <LinearLayout
-                    android:layout_below="@id/topLabelBar"
-                    android:layout_above="@id/footer"
-                    android:gravity="center"
-                    android:layout_centerInParent="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_above="@id/footer"
+                    android:layout_below="@id/topLabelBar"
+                    android:layout_centerInParent="true"
+                    android:gravity="top"
                     android:orientation="vertical"
                     android:paddingStart="20dp"
                     android:paddingEnd="20dp"
                     android:showDividers="middle">
 
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginBottom="100dp"
+                        app:srcCompat="@drawable/ic_bluelogo" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/muli"
                         android:paddingStart="0dp"
                         android:paddingEnd="15dp"
-                        android:textSize="20sp"
-                        android:fontFamily="@font/muli"
                         android:text="Email"
-                        android:textColor="@color/colorSecondaryGrey" />
+                        android:textColor="@color/colorSecondaryGrey"
+                        android:textSize="20sp" />
 
                     <EditText
                         android:id="@+id/txtEmail"
@@ -90,22 +103,22 @@
                         android:background="@drawable/txt_input_grey"
                         android:ems="10"
                         android:fontFamily="@font/muli"
+                        android:hint="Email"
                         android:inputType="textEmailAddress"
+                        android:text="@={user.UserEmail}"
                         android:textColor="@color/colorPrimaryBlack"
                         android:textCursorDrawable="@drawable/txt_cursor"
-                        android:textSize="16sp"
-                        android:hint="Email"
-                        android:text="@={user.UserEmail}" />
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/muli"
                         android:paddingStart="0dp"
                         android:paddingEnd="15dp"
                         android:text="Password"
-                        android:fontFamily="@font/muli"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorSecondaryGrey" />
+                        android:textColor="@color/colorSecondaryGrey"
+                        android:textSize="20sp" />
 
                     <EditText
                         android:id="@+id/txtPassword"
@@ -114,27 +127,27 @@
                         android:background="@drawable/txt_input_grey"
                         android:ems="10"
                         android:fontFamily="@font/muli"
+                        android:hint="Password"
                         android:inputType="textPassword"
+                        android:text="@={user.UserPass}"
                         android:textColor="@color/colorPrimaryBlack"
                         android:textCursorDrawable="@drawable/txt_cursor"
-                        android:textSize="16sp"
-                        android:hint="Password"
-                        android:text="@={user.UserPass}" />
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/btnForgotPass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/muli"
+                        android:onClick="@{onClick}"
                         android:paddingStart="15dp"
-                        android:paddingEnd="15dp"
                         android:paddingTop="5dp"
+                        android:paddingEnd="15dp"
                         android:paddingBottom="15dp"
                         android:text="Forgot Password?"
-                        android:fontFamily="@font/muli"
                         android:textAlignment="viewEnd"
-                        android:textSize="20sp"
                         android:textColor="@color/colorPrimaryBlue"
-                        android:onClick="@{onClick}" />
+                        android:textSize="20sp" />
 
                     <Button
                         android:id="@+id/btnLogin"
@@ -145,10 +158,10 @@
                         android:elevation="0dp"
                         android:fontFamily="@font/muli_bold"
                         android:letterSpacing=".33"
+                        android:onClick="@{onClick}"
                         android:text="Login"
                         android:textColor="@color/colorPrimaryWhite"
-                        android:textSize="20sp"
-                        android:onClick="@{onClick}" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
