--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,9 +8,10 @@
 
     <ImageView
         android:id="@+id/imageView"
+        android:layout_margin="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/vec_logo" />
+        app:srcCompat="@drawable/ic_bluelogo" />
 
 </RelativeLayout>
 
