--- a/app/src/main/res/layout/fragment_add_device.xml
+++ b/app/src/main/res/layout/fragment_add_device.xml
@@ -108,30 +108,30 @@
                 android:id="@+id/footer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
                 android:layout_alignParentBottom="true"
-                android:background="@color/colorPrimaryWhite">
+                android:background="@color/colorPrimaryWhite"
+                android:padding="20dp">
 
                 <TextView
                     android:id="@+id/tv_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:textSize="22sp"
                     android:fontFamily="@font/muli_bold"
                     android:onClick="@{onClick}"
-                    android:text="Cancel" />
+                    android:text="Cancel"
+                    android:textSize="22sp" />
 
                 <TextView
                     android:id="@+id/tv_next"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:textSize="22sp"
-                    android:textColor="@color/colorPrimaryBlue"
                     android:fontFamily="@font/muli_bold"
                     android:onClick="@{onClick}"
-                    android:text="Next" />
+                    android:text="Next"
+                    android:textColor="@color/colorPrimaryBlue"
+                    android:textSize="22sp" />
             </RelativeLayout>
         </RelativeLayout>
 
