--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
                 <RelativeLayout
                     android:id="@+id/topLabelBar"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="5dp"
                     android:layout_alignParentTop="true"
                     android:padding="5dp">
 
@@ -82,8 +82,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginTop="0dp"
-                        android:layout_marginBottom="100dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="30dp"
                         app:srcCompat="@drawable/ic_bluelogo" />
 
                     <TextView
@@ -143,7 +143,7 @@
                         android:paddingStart="15dp"
                         android:paddingTop="5dp"
                         android:paddingEnd="15dp"
-                        android:paddingBottom="15dp"
+                        android:paddingBottom="5dp"
                         android:text="Forgot Password?"
                         android:textAlignment="viewEnd"
                         android:textColor="@color/colorPrimaryBlue"
@@ -153,7 +153,7 @@
                         android:id="@+id/btnLogin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="30dp"
                         android:background="@drawable/txt_input_blue"
                         android:elevation="0dp"
                         android:fontFamily="@font/muli_bold"
@@ -166,11 +166,11 @@
 
                 <LinearLayout
                     android:id="@+id/footer"
-                    android:layout_alignParentBottom="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:layout_marginTop="10dp"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:orientation="horizontal"
                     android:padding="20dp"
                     android:showDividers="middle">
@@ -178,20 +178,20 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorSecondaryGrey"
                         android:fontFamily="@font/muli"
-                        android:text="Don't have an account?" />
+                        android:text="Don't have an account?"
+                        android:textColor="@color/colorSecondaryGrey"
+                        android:textSize="20sp" />
 
                     <TextView
                         android:id="@+id/btnSignup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="  Sign Up"
                         android:fontFamily="@font/muli"
-                        android:textSize="20sp"
+                        android:onClick="@{onClick}"
+                        android:text="  Sign Up"
                         android:textColor="@color/colorPrimaryBlue"
-                        android:onClick="@{onClick}" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
             </RelativeLayout>
