--- a/app/src/main/res/layout/fragment_signup_auth.xml
+++ b/app/src/main/res/layout/fragment_signup_auth.xml
@@ -58,7 +58,7 @@
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_alignParentEnd="true"
-                        app:srcCompat="@drawable/vec_logo" />
+                        app:srcCompat="@drawable/ic_blueantenna" />
                 </RelativeLayout>
 
                 <LinearLayout
@@ -149,6 +149,7 @@
                     android:padding="16dp"
                     android:showDividers="middle">
 
+                    <!--
                     <TextView
                         android:id="@+id/btnBack"
                         android:layout_width="wrap_content"
@@ -158,6 +159,7 @@
                         android:text="Back"
                         android:textColor="@color/colorSecondaryGrey"
                         android:textSize="22sp" />
+                     -->
 
                 </LinearLayout>
 
