--- a/app/src/main/res/layout/fragment_signup_success.xml
+++ b/app/src/main/res/layout/fragment_signup_success.xml
@@ -59,7 +59,7 @@
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_alignParentEnd="true"
-                        app:srcCompat="@drawable/vec_logo" />
+                        app:srcCompat="@drawable/ic_blueantenna" />
                 </RelativeLayout>
 
                 <LinearLayout
@@ -102,12 +102,12 @@
                     android:showDividers="middle">
 
                     <TextView
-                        android:id="@+id/btnReturn"
+                        android:id="@+id/tv_return"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Return to Login"
                         android:fontFamily="@font/muli_bold"
-                        android:textSize="22sp"
+                        android:textSize="24sp"
                         android:textColor="@color/colorPrimaryBlue"
                         android:onClick="@{onClick}" />
 
